courses/430_programming-languages/assignment-6/tests/error/hw4_error13.correct
unary operator '!' requires bool, found none
